ISS #3 | Completed Filter Blog and Navbar component changes

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,3 +1,7 @@
 {
-    "LOGIN": "Login"
+    "HOME": "Home",
+    "RESUME": "Resume",
+    "PROJECTS": "Projects",
+    "BLOGS": "Blogs",
+    "COMMUNICATION": "Communication"
 }
