--- a/src/assets/i18n/tr.json
+++ b/src/assets/i18n/tr.json
@@ -1,3 +1,7 @@
 {
-    "LOGIN": "Giriş Yap"
+    "HOME": "Anasayfa",
+    "RESUME": "Özgeçmişim",
+    "PROJECTS": "Projeler",
+    "BLOGS": "Makaleler",
+    "COMMUNICATION": "İletişim"
 }
